nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saas-ingress
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "20"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saas-app-service
            port:
              number: 80
  ingressClassName: nginx
