nginx/ingress_aggressive.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aggressivelimiter
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "1"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "1"
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.244.151.1/32"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: saas-app-service
            port:
              number: 80
  ingressClassName: nginx
